Set Flow Of add appointment according to website(Design Correction in Product detail and Appointment ) , Payment Gateway Integration myfatoorah .

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_calendar_carousel:
   rxdart: 0.18.1
   loader_search_bar:
+  myfatoorah_flutter:
   path:
 
 dev_dependencies:
