--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,4 +56,5 @@ flutter {
 
 dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
