--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,9 @@
 name: salon_app
 description: A new Flutter application.
-
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
-
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
@@ -37,14 +24,17 @@ dependencies:
   location: ^3.0.2
   toast:
   custom_progress_dialog: ^1.0.5
-  flutter_html:
+  flutter_html: ^1.0.0
   connectivity:
   provider:
   flutter_calendar_carousel:
   rxdart: 0.18.1
   loader_search_bar:
   myfatoorah_flutter:
+  image_picker:
+  carousel_slider:
   path:
+  photo_view:
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +42,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -70,6 +59,7 @@ flutter:
     - images/clean.png
     - images/bg.png
     - images/bg_1.png
+    - images/top_icon.png
     - images/logo_header.png
     - images/white_logo.png
     - images/confirm.png
@@ -91,6 +81,10 @@ flutter:
     - family: TimeRomanBold
       fonts:
         - asset: fonts/TimeRomanBold.ttf
+        #- asset: fonts/JosefinSans-Bold.ttf
+        #- asset: fonts/JosefinSans-Light.ttf
+        #- asset: fonts/JosefinSans-Regular.ttf
+        #- asset: fonts/JosefinSans-SemiBold.ttf
 
   # fonts:
   #   - family: Schyler
