Description data in product creation

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,8 +67,12 @@
     <true/>
     <key>NSAppTransportSecurity</key>
     <dict>
-    <key>NSAllowsArbitraryLoads</key>
-     <true/>
-        </dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+        <key>NSAllowsArbitraryLoadsForMedia</key>
+        <true/>
+        <key>NSAllowsArbitraryLoadsInWebContent</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
