Barber Category Design and category Wise product Design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - images/clean.png
     - images/bg.png
     - images/bg_1.png
+    - images/barber_cat.png
     - images/top_icon.png
     - images/logo_header.png
     - images/white_logo.png
