--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   shared_preferences:
-  json_annotation: ^1.2.0
+  json_annotation:
   http: ^0.12.0
   google_maps_flutter: ^0.5.32
   location: ^3.0.2
