--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Barber App"
+        android:label="CUTCQ"
         android:icon="@mipmap/ic_launcher">
 
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
