--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,20 +16,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  shared_preferences:
+  cupertino_icons:
+  shared_preferences: ^0.5.6+2
   json_annotation:
   http: ^0.12.0
   google_maps_flutter: ^0.5.32
   location: ^3.0.2
   toast:
   custom_progress_dialog: ^1.0.5
-  flutter_html: ^1.0.0
+#  flutter_html:
+  html: ^0.15.0
   connectivity:
   provider:
   flutter_calendar_carousel:
   rxdart: 0.18.1
-  loader_search_bar:
+#  loader_search_bar:
   #myfatoorah_flutter:
   my_fatoorah:
   html_editor:
@@ -74,17 +75,6 @@ flutter:
     - i18n/ar.json
     - i18n/en.json
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: TimeRomanBold
       fonts:
@@ -94,17 +84,3 @@ flutter:
         #- asset: fonts/JosefinSans-Regular.ttf
         #- asset: fonts/JosefinSans-SemiBold.ttf
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
